Fix flicker on page load.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 #logo {
+    display: none;
 	position: fixed;
   	top: 50%;
   	left: 50%;
